@@ -1,6 +1,7 @@
 ﻿4.0.10.alpha.1 - 1st June 2024
 - For 'Recent chat window', ('Chat'), increased the number of recent chat messages shown from 128 to 256.
 - For 'Restore chat messages' ('Chat'), increased the number of restored chat messages from 128 to 256.
+- For 'Filter chat messages' ('Chat'), added a setting to block guild announcements (such as guild member achievements).
 - Structural changes.
 
 4.0.07 - 15th May 2024
